Fix open badge invisible width

--- a/app/assets/stylesheets/pages/title.css.sass
+++ b/app/assets/stylesheets/pages/title.css.sass
@@ -98,14 +98,14 @@ $title-height: 1.4 * $title-width
     display: block
     position: absolute
     left: 100%
-    margin-left: -10px
+    margin-left: -250px
     height: 30px
     line-height: 30px
     color: white
     text-shadow: rgba(0, 0, 0, 0.5) 0 1px 0
     text-decoration: none
     z-index: 14
-    padding: 0 6px 0 32px
+    padding: 0 6px 0 262px
     &, .arrow
       background: #e3591a
       +transition(background, 200ms, linear)
@@ -121,7 +121,7 @@ $title-height: 1.4 * $title-width
       top: 12px
       right: 0
       bottom: 12px
-      left: 22px
+      left: 252px
       +box-shadow(rgba(0, 0, 0, 0.3) 10px 0 12px)
     .crop-arrow
       position: absolute
@@ -149,6 +149,14 @@ $title-height: 1.4 * $title-width
       &.no-right
         right: 0
         border-right: none
+    .gradient
+      position: absolute
+      top: 0
+      left: 0
+      width: 260px
+      bottom: 0
+      +background( linear-gradient(top left, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3) 190px, rgba(255, 255, 255, 0)) )
+      +box-shadow(rgba(0, 0, 0, 0.15) 0 3px 3px -2px, rgba(0, 0, 0, 0.15) 0 -3px 3px -2px, rgba(0, 0, 0, 0.15) -3px 0 3px -2px)
     &:hover
       &, .arrow
         background: lighten(#e3591a, 6%)
